--- a/netlify/functions/uuid/Cargo.toml
+++ b/netlify/functions/uuid/Cargo.toml
@@ -13,3 +13,4 @@ log = "0.4.14"
 simple_logger = "1.11.0"
 tokio = "1.6.1"
 uuid = { version = "0.8", features = ["serde", "v4"] }
+serde_json = "1.0.68"
